--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <nav>
-        <a href="/">Home</a>
-        <a href="/about.html">About</a>
+        <a href="/" {% if page.url == "/" %}style="color: red;"{% endif %}>
+            Home
+        </a>
+        <a href="/about.html" {% if page.url == "/about.html" %}style="color: red;"{% endif %}>
+            About
+        </a>
     </nav>
 </html>
