--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,42 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-    <div class="top-menu">
-        <nav>
-            {% for item in site.data.navigation %}
-            <a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>{{ item.name }}</a>
-            {% endfor %}
-        </nav>
-    </div>
-</html>
-
-
-<!-- Navbar (sit on top)
-<div class="w3-top">
-    <div class="w3-bar w3-white w3-card" id="myNavbar">
-        <a href="#home" class="w3-bar-item w3-button w3-wide">LOGO</a>
-
-        <div class="w3-right w3-hide-small">
-            <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
-            <a href="#team" class="w3-bar-item w3-button"><i class="fa fa-user"></i> TEAM</a>
-            <a href="#work" class="w3-bar-item w3-button"><i class="fa fa-th"></i> WORK</a>
-            <a href="#pricing" class="w3-bar-item w3-button"><i class="fa fa-usd"></i> PRICING</a>
-            <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
-        </div>
-
-
-        <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
-            <i class="fa fa-bars"></i>
+<div class="navigation-bar">
+    {% for item in site.data.navigation %}
+        <a href="{{ item.link }}"
+            {% if item.name == "HOME" and page.url == item.link %}
+                class="left current"
+            {% elsif item.name == "HOME" %}
+                class="left usual"
+            {% elsif page.url == item.link %}
+                class="right current"
+            {% else %}
+                class="right usual"
+            {% endif %}
+        >
+            {{ item.name }}
         </a>
-    </div>
+    {% endfor %}
 </div>
--->
-<!-- Sidebar on small screens when clicking the menu icon
-<nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
-    <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
-    <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
-    <a href="#team" onclick="w3_close()" class="w3-bar-item w3-button">TEAM</a>
-    <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button">WORK</a>
-    <a href="#pricing" onclick="w3_close()" class="w3-bar-item w3-button">PRICING</a>
-    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
-</nav>
--->
+
+<!--{% for item in site.data.navigation %}-->
+<!--{% if item.name == "HOME" %}-->
+<!--<a href="{{ item.link }}"-->
+<!--   {% if page.url == item.link %}-->
+<!--   class="left current"-->
+<!--   {% else %}-->
+<!--   class="left usual"-->
+<!--   {% endif %}-->
+<!--&gt;-->
+<!--    {{ item.name }}-->
+<!--</a>-->
+<!--{% else %}-->
+<!--<a href="{{ item.link }}"-->
+<!--   {% if page.url == item.link %}-->
+<!--   class="right current"-->
+<!--   {% else %}-->
+<!--   class="right usual"-->
+<!--   {% endif %}-->
+<!--&gt;-->
+<!--    {{ item.name }}-->
+<!--</a>-->
+<!--{% endif %}-->
+<!--{% endfor %}-->
