--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,15 +1,40 @@
 // Variables
-$currentLinkColor: darkcyan;
-$topMenuBackgroundColor: red;
+$currentLinkColor: cyan;
+$usualLinkColor: green;
+$navigationBarColor: #ddd;
 
-.top-menu {
-  background: $topMenuBackgroundColor;
-  color: $topMenuBackgroundColor;
-  font-size: 16px;
-  padding: 19px 0;
+.navigation-bar {
+  overflow: hidden;
+  background-color: $navigationBarColor;
 }
 
-.current {
+.navigation-bar a.left {
+  float: left;
+}
+
+.navigation-bar a.right {
+  float: right;
+}
+
+.navigation-bar a.current {
   color: $currentLinkColor;
+  background-color: $usualLinkColor;
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
+  font-size: 17px;
 }
+
+.navigation-bar a.usual {
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navigation-bar a.usual:hover {
+  background-color: #555;
+  color: white;
+}
+
