Add social links

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,40 +1,2 @@
-// Variables
-$currentLinkColor: cyan;
-$usualLinkColor: green;
-$navigationBarColor: #ddd;
-
-.navigation-bar {
-  overflow: hidden;
-  background-color: $navigationBarColor;
-}
-
-.navigation-bar a.left {
-  float: left;
-}
-
-.navigation-bar a.right {
-  float: right;
-}
-
-.navigation-bar a.current {
-  color: $currentLinkColor;
-  background-color: $usualLinkColor;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.navigation-bar a.usual {
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.navigation-bar a.usual:hover {
-  background-color: #555;
-  color: white;
-}
-
+@import "navigationBar";
+@import "socialLinks";
