--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,2 +1,67 @@
 @import "navigationBar";
 @import "socialLinks";
+
+@mixin large-text {
+  font-size: 36px!important;
+}
+
+@mixin middle-text {
+  font-size: 18px!important;
+}
+
+.image-background {
+  background-image: url("/assets/images/mac.jpg");
+  background-position: center;
+  background-size: cover;
+  min-height: 100%;
+  height: 800px;
+}
+
+.text-white {
+  color: #fff;
+}
+
+.display-left {
+  position: absolute;
+  top: 50%;
+  left: 0%;
+  transform: translate(0%,-50%);
+}
+
+.display-container {
+  position: relative;
+}
+
+.grayscale-min {
+  filter: grayscale(50%);
+}
+
+.button {
+  @include middle-text;
+  display: inline-block;
+  vertical-align: middle;
+  overflow: hidden;
+  text-decoration: none;
+  text-align: center;
+  cursor: pointer;
+  white-space: nowrap;
+
+  color: #000;
+  background-color: #fff;
+  opacity: 0.60;
+
+  margin-top: 16px;
+  padding: 12px 24px;
+}
+
+.large-title {
+  @include large-text;
+}
+
+.middle-text {
+  @include  middle-text;
+}
+
+.button:hover {
+  opacity: 1.0;
+}
