--- a/_layouts/defaultLayout.html
+++ b/_layouts/defaultLayout.html
@@ -4,6 +4,12 @@
         <meta charset="UTF-8">
         <title>{{ page.title }}</title>
         <link rel="stylesheet" href="/assets/css/styles.css">
+        <style>
+            body, html {
+                height: 100%;
+                margin: 0;
+            }
+        </style>
     </head>
     <body>
         {% include navigation.html %}
