Add about items

--- a/_sass/icons.scss
+++ b/_sass/icons.scss
@@ -1,21 +1,31 @@
-@mixin icon-before {
+// Variables
+$contactIconWidth: 20px;
+$contactIconHeight: 20px;
+$buttonIconWidth: 20px;
+$buttonIconHeight: 20px;
+$aboutIconWidth: 64px;
+$aboutIconHeight: 64px;
+$floatLeft: left;
+$floatTop: top;
+
+@mixin icon-before($float, $width, $height) {
   content: "";
   background: {
-    size: 20px;
+    size: $width;
     repeat: no-repeat;
     position: center;
   }
-  width: 20px;
-  height: 20px;
-  float: left;
+  width: $width;
+  height: $height;
+  float: $float;
   margin: 0 8px 0 0;
 }
 
-.icon {
+.contact-icon {
   margin-top: 50px;
 
   p:before {
-    @include icon-before;
+    @include icon-before($floatLeft, $contactIconWidth, $contactIconHeight);
   }
 
   p.geo-marker:before {
@@ -32,9 +42,25 @@
 }
 
 .button-icon:before {
-  @include icon-before;
+  @include icon-before($floatLeft, $buttonIconWidth, $contactIconHeight);
 }
 
 .button-icon-paper-plane:before {
   background-image: url("/assets/images/icons/paperPlane.png");
+}
+
+.about-icon {
+  @include icon-before($floatTop, $aboutIconWidth, $aboutIconHeight);
+  &-first:before {
+    content: url("/assets/images/icons/artificialIntelligence.png");
+  }
+  &-second:before {
+    content: url("/assets/images/icons/artificialIntelligence.png");
+  }
+  &-third:before {
+    content: url("/assets/images/icons/artificialIntelligence.png");
+  }
+  &-fourth:before {
+    content: url("/assets/images/icons/artificialIntelligence.png");
+  }
 }
