--- a/_layouts/defaultLayout.html
+++ b/_layouts/defaultLayout.html
@@ -15,4 +15,5 @@
         {% include navigation.html %}
         {{ content }}
     </body>
+    <script src="/assets/js/main.js"></script>
 </html>
