--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,15 +2,18 @@
 layout: defaultLayout
 ---
 {% include blogSideBar.html %}
-<h1>{{ page.title }}</h1>
-<div class="post-container">
-    <p>
-        {{ page.date | date_to_string }}
-        {% assign author = site.authors | where: 'short_name', page.author | first %}
-        {% if author %}
-            - <a href="{{ author.url }}">{{ author.name }}</a>
-        {% endif %}
-    </p>
-
+<div class="page-container post-container" style="height: 100%;">
+    <h1>{{ page.title }}</h1>
+    <div class="post-info">
+        <div class="author-block">
+            {% assign author = site.authors | where: 'short_name', page.author | first %}
+            {% if author %}
+                <a href="{{ author.url }}">{{ author.name }}</a>
+            {% endif %}
+        </div>
+        <div class="date-block">
+            {{ page.date | date_to_string }}
+        </div>
+    </div>
     {{ content }}
 </div>
