--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -1,16 +1,19 @@
 ---
 layout: defaultLayout
 ---
-
-<h1>{{ page.name }}</h1>
-<h2>{{ page.position }}</h2>
-
-{{ content }}
-
-<h2>Posts</h2>
-<ul>
-    {% assign filtered_posts = site.posts | where: 'author', page.short_name %}
-    {% for post in filtered_posts %}
-        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-</ul>
+<div class="page-container" style="height: 100%;">
+    <div class="text-center">
+        <img src="{{ page.avatar }}">
+        <h1>{{ page.name }}</h1>
+        <h2>{{ page.position }}</h2>
+        <p class="middle-title">{{ content }}</p>
+    </div>
+    <div class="text-center">
+        <h2>Posts</h2>
+        {% assign filtered_posts = site.posts | where: 'author', page.short_name %}
+        {% for post in filtered_posts %}
+            <a href="{{ post.url }}">{{ post.title }}</a>
+            <p>{{ post.excerpt }}</p>
+        {% endfor %}
+    </div>
+</div>
